flight_visualizer/log/build_2021-04-19_11-50-27/flight_visualizer/stdout_stderr.log
running egg_info
writing ../../build/flight_visualizer/flight_visualizer.egg-info/PKG-INFO
writing dependency_links to ../../build/flight_visualizer/flight_visualizer.egg-info/dependency_links.txt
writing entry points to ../../build/flight_visualizer/flight_visualizer.egg-info/entry_points.txt
writing requirements to ../../build/flight_visualizer/flight_visualizer.egg-info/requires.txt
writing top-level names to ../../build/flight_visualizer/flight_visualizer.egg-info/top_level.txt
reading manifest file '../../build/flight_visualizer/flight_visualizer.egg-info/SOURCES.txt'
writing manifest file '../../build/flight_visualizer/flight_visualizer.egg-info/SOURCES.txt'
running build
running build_py
copying flight_visualizer/graph_data.py -> /home/paul/Ground-Station/flight_visualizer/build/flight_visualizer/build/lib/flight_visualizer
running install
running install_lib
copying /home/paul/Ground-Station/flight_visualizer/build/flight_visualizer/build/lib/flight_visualizer/graph_data.py -> /home/paul/Ground-Station/flight_visualizer/install/flight_visualizer/lib/python3.8/site-packages/flight_visualizer
byte-compiling /home/paul/Ground-Station/flight_visualizer/install/flight_visualizer/lib/python3.8/site-packages/flight_visualizer/graph_data.py to graph_data.cpython-38.pyc
  File "/home/paul/Ground-Station/flight_visualizer/install/flight_visualizer/lib/python3.8/site-packages/flight_visualizer/graph_data.py", line 64
    ani = animation.FuncAnimation(plt.gcf(), animate, interval=1000, x_vals, y_vals)
                                                                     ^
SyntaxError: positional argument follows keyword argument

running install_data
running install_egg_info
removing '/home/paul/Ground-Station/flight_visualizer/install/flight_visualizer/lib/python3.8/site-packages/flight_visualizer-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/flight_visualizer/flight_visualizer.egg-info to /home/paul/Ground-Station/flight_visualizer/install/flight_visualizer/lib/python3.8/site-packages/flight_visualizer-0.0.0-py3.8.egg-info
running install_scripts
Installing graph_data script to /home/paul/Ground-Station/flight_visualizer/install/flight_visualizer/lib/flight_visualizer
writing list of installed files to '/home/paul/Ground-Station/flight_visualizer/build/flight_visualizer/install.log'
